--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
     href="https://cdn.jsdelivr.net/npm/bootstrap@3.4.1/dist/css/bootstrap.min.css" integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu" crossorigin="anonymous"> -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Salsa&family=Satisfy&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Recursive:wght@300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="index.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
     rel="stylesheet">
 
-    <title>Franmakes Designer</title>
+    <title>Franciele Designer</title>
 </head>
 <body>
     <div class="gradiente">
@@ -34,7 +34,7 @@
         <div class=" apresentacao">
             <section class="nome-profissao">
                 <p class="nome">Olá! Meu nome é </br><strong>Franciele Santos</strong></p>
-                <p class="profissao">Sou Designer de Sobrancelhas <br>e estudante de administração</p>
+                <p class="profissao">Sou Designer de Sobrancelhas</p>
             </section>
             <img class="fran-foto" src="fran.png" alt="foto-perfil">
             <a class="btn-fixed" href="#top">
@@ -83,16 +83,16 @@
         <ul class="lista-servicos">
            
                 <li class="serv1">
-                    <img class="sobrancelha-pinca" src="sobrancelha-pinca.jpg" alt="foto-perfil">
-                    <p class="texto-design"><strong>DESIGN DE SOBRANCELHAS</strong><br>
+                    <p class="texto-design"><strong>DESIGN DE SOBRANCELHAS <br>COM PINÇA</strong><br>
                         Realizada com pinça, limpa e modela as sobrancelhas, harmonizando o rosto.
                     </p>
+                    <img class="sobrancelha-pinca" src="sobrancelha-pinca.jpg" alt="foto-perfil">
                 </li>
             
 
             <li class="serv2">
                 <img class="sobrancelha-henna" src="sobrancelha-henna.jpg" alt="foto-perfil">
-                <p class="texto-henna"> <strong>APLICAÇÃO DE HENNA</strong><br>
+                <p class="texto-henna"> <strong>DESIGN DE SOBRANCELHA <br>COM HENNA</strong><br>
                 Indicado para cobrir falhas ou realçar a cor das sobrancelhas.
                 </p>
             </li>
