--- a/index.html
+++ b/index.html
@@ -144,8 +144,13 @@
             <p class="p-contato">Contato</p>
             <ul class="lista-contato">
                 <li class="li-wpp">
-                    <img src="wpp.png" class="wpp" alt="logo wpp"></li><p class="numero-wpp">(71)99999-99999</p>
-                <li class="li-instagram"><img src="instagram.png" class="instagram" alt="logo instagram"></li><p class="nome-instagram">@donnafran</p>
+                    <img src="wpp.png" class="wpp" alt="logo wpp">
+                    <p class="numero-wpp">99999-99999</p>
+                </li>
+                <li class="li-instagram">
+                    <img src="instagram.png" class="instagram" alt="logo instagram">
+                    <p class="nome-instagram">@donnafran</p>
+                </li>
             </ul>
         </div>
 
