--- a/index.html
+++ b/index.html
@@ -4,12 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="mobile320.css">
+    <link rel="stylesheet" href="mobile425.css">
+
+
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
  
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Recursive:wght@300&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="index.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
     rel="stylesheet">
 
@@ -34,7 +38,7 @@
         <div class=" apresentacao">
             <section class="nome-profissao">
                 <p class="nome">Olá! Meu nome é </br><strong>Franciele Santos</strong></p>
-                <p class="profissao">Sou Designer de Sobrancelhas</p>
+                <p class="profissao">Designer de Sobrancelhas</p>
             </section>
             <img class="fran-foto" src="fran.png" alt="foto-perfil">
             <a class="btn-fixed" href="#top">
