details fixed and finished

--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="index.css">
-    <link rel="stylesheet" href="mobile320.css">
-    <link rel="stylesheet" href="mobile425.css">
+    <link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" href="css/mobile320.css">
+    <link rel="stylesheet" href="css/mobile425.css">
+    <link rel="stylesheet" href="css/screen1440.css">
+    <link rel="stylesheet" href="css/screen728.css">
 
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
@@ -89,32 +91,6 @@
                   <span class="sr-only">Next</span>
                 </a>
               </div>
-            <!-- <ul class="fotos-portfolio">
-                <li>
-                    <img class="foto-sobrancelha" src="imagens/a1.jpeg" alt="1">
-                </li>
-                <li>
-                    <img class="foto-sobrancelha" src="imagens/d1.jpeg" alt="1">
-                </li>
-                <li>
-                    <img class="foto-sobrancelha" src="imagens/a2.jpeg" alt="1">
-                </li>
-                <li>
-                    <img class="foto-sobrancelha" src="imagens/d2.jpeg" alt="1">
-                </li>
-                <li>
-                    <img class="foto-sobrancelha" src="imagens/design-antes1.jpeg" alt="1">
-                </li>
-                <li>
-                    <img class="foto-sobrancelha" src="imagens/design-depois1.jpeg" alt="1">
-                </li>
-                <li>
-                    <img class="foto-sobrancelha" src="imagens/design-antes2.jpeg" alt="1">
-                </li>
-                <li>
-                    <img class="foto-sobrancelha" src="imagens/design-depois2.jpeg" alt="1">
-                </li>
-            </ul> -->
         </div>
 
     </section>
